[package]
name = "gomoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["gomoku_core"]


[dependencies]
tauri = "1.6.0"
gomoku_core = { path = "./gomoku_core" }
# minimax = "0.5.3"
rand = "0.8.5"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
