[package]
name = "gomoku_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# minimax = "0.5.3"
rayon = "1.8.1"
rand = "0.8.5"
num_cpus = "1.16.0"


[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "gomoku"
harness = false
